Committed just before user controls are added to clean up markup

--- a/emovies.website/Content/Site.css
+++ b/emovies.website/Content/Site.css
@@ -12,7 +12,7 @@ h1 {
     font-weight: bold;
     height: 39px;
     line-height: 39px;
-    margin: 10vh 0 33px 10px;
+    margin: 0 0 33px 10px;
 }
 
 h2 {
@@ -35,13 +35,25 @@ button:active {
     transform: translateY(2px);
 }
 
-input, select {
+input {
     outline: none;
+}
+
+select {
+    outline: none;
+    /*
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
+    background: url("Images2/diamond.png");
+    background-repeat: no-repeat;
+    background-position: right 0px;*/
 }
 
 .container {
     font-family: calibri, sans-serif;
-    margin: 0 auto;
+    margin: 10vh auto;
     position: relative;
     width: 680px;
 }
@@ -335,6 +347,7 @@ input, select {
 }
 
 .total__cell--value {
+    display: block;
     width: 84px;
     right: 0px;
 }
