update client side validation working

--- a/emovies.website/Content/Site.css
+++ b/emovies.website/Content/Site.css
@@ -161,6 +161,10 @@ select {
     right: 0;
     width: 184px;
     top: 0px;
+    border: none;
+    color: #fff;
+    font-size: 1em;
+    outline: none;
 }
 
 .notice {
